# src/plugin/.well-known/openapi.yaml
@@ -2,23 +2,35 @@ components:
   schemas:
     CreateTaskRequest:
       properties:
-        notes:
-          description: Its important to add notes when creating a task to make this
-            utility more useful! Think about it step by step. Add the context and
-            any additional information. Can be from the user or the AI
+        args:
+          description: If the task script accepts arguments, describe each of them
+            here. If none, put an empty array.
+          items:
+            description: Description of the positional argument that must be passed
+              to the task
+            type: string
+          type: array
+        code:
+          description: A standalone python3 script that executes the task exactly
+            as specified. It may reference any external libraries necessary.
           type: string
-        status:
-          description: 'Status of the Task. Value can be anything, but suggested are:
-            ''todo'', ''in progress'', ''done'', ''do later'', ''cancelled'', etc.
-            Put whatever makes most contextual sense here.'
+        desc:
+          description: Thorough task description. Describe what the task does on the
+            outside with as much detail as possible. Inlcude implementation details
+            if theyre relevant to what an engineer would care about.
+          type: string
+        notes:
+          description: Think step by step about how to write the task code here.
           type: string
         task:
-          description: Simple task description. Use other fields to add as many useful
-            details as possible.
+          description: Descriptive Name of task. It can be short, no more than a single
+            sentence.
           type: string
       required:
+      - args
+      - code
+      - desc
       - notes
-      - status
       - task
       type: object
     MemorizeRequest:
@@ -87,6 +99,18 @@ components:
       - document
       - metadata
       type: object
+    RunTaskRequest:
+      properties:
+        args:
+          description: If the task script expects arguments, put their values here.
+            If none, put an empty array.
+          items:
+            description: The positional argument that will be passed to the task
+            type: string
+          type: array
+      required:
+      - args
+      type: object
     SearchRequest:
       properties:
         query:
@@ -139,39 +163,100 @@ components:
       type: object
     Task:
       properties:
-        notes:
-          description: Its important to add notes about the task to make this utility
-            more useful! Think about it step by step. Add the context and any additional
-            information. Can be from the user or the AI
+        args:
+          description: If the task script accepts arguments, they will be described
+            here. If it doesnt, this is an empty array.
+          items:
+            description: Description of the positional argument that must be passed
+              to the task
+            type: string
+          type: array
+        code:
+          description: A standalone python3 script that executes the task exactly
+            as specified. It may reference any external libraries necessary.
           type: string
-        status:
-          description: 'Status of the Task. Value can be anything, but suggested are:
-            ''todo'', ''in progress'', ''done'', ''do later'', ''cancelled'', etc.
-            Put whatever makes most contextual sense here.'
+        desc:
+          description: Thorough task description. Describe what the task does on the
+            outside with as much detail as possible. Inlcude implementation details
+            if theyre relevant to what an engineer would care about.
+          type: string
+        notes:
+          description: Think step by step about how to write the task code here.
           type: string
         task:
-          description: Simple task description
+          description: Descriptive Name of task. It can be short, no more than a single
+            sentence.
           type: string
         uuid:
           description: Unique identifier (UUID) of the item. This is generated by
             the server and cannot be changed.
           type: string
       required:
+      - args
+      - code
+      - desc
       - notes
-      - status
+      - task
+      - uuid
+      type: object
+    TaskWithoutCode:
+      properties:
+        args:
+          description: If the task script accepts arguments, they will be described
+            here. If it doesnt, this is an empty array.
+          items:
+            description: Description of the positional argument that must be passed
+              to the task
+            type: string
+          type: array
+        desc:
+          description: Thorough task description. Describe what the task does on the
+            outside with as much detail as possible. Inlcude implementation details
+            if theyre relevant to what an engineer would care about.
+          type: string
+        notes:
+          description: Think step by step about how to write the task code here.
+          type: string
+        task:
+          description: Descriptive Name of task. It can be short, no more than a single
+            sentence.
+          type: string
+        uuid:
+          description: Unique identifier (UUID) of the item. This is generated by
+            the server and cannot be changed.
+          type: string
+      required:
+      - args
+      - desc
+      - notes
       - task
       - uuid
       type: object
     UpdateTaskRequest:
       properties:
-        notes:
-          description: Freeform notes about the Task
+        args:
+          description: If the task script accepts arguments, describe each of them
+            here. If none, put an empty array.
+          items:
+            description: Description of the positional argument that must be passed
+              to the task
+            type: string
+          type: array
+        code:
+          description: A standalone python3 script that executes the task exactly
+            as specified. It may reference any external libraries necessary.
           type: string
-        status:
-          description: Status of the Task
+        desc:
+          description: Thorough task description. Describe what the task does on the
+            outside with as much detail as possible. Inlcude implementation details
+            if theyre relevant to what an engineer would care about.
+          type: string
+        notes:
+          description: Think step by step about how to write the task code here.
           type: string
         task:
-          description: Task description
+          description: Descriptive Name of task. It can be short, no more than a single
+            sentence.
           type: string
       type: object
     UrlRequest:
@@ -190,20 +275,6 @@ components:
           type: string
       required:
       - body
-      type: object
-    VimExRequest:
-      properties:
-        commands:
-          description: The Vim commands to run on the user's machine in Ex mode.
-          items:
-            type: string
-          type: array
-        file_name:
-          description: The file name to operate on.
-          type: string
-      required:
-      - commands
-      - file_name
       type: object
 info:
   description: A ChatGPT plugin API for the GPT Toolbox
@@ -326,10 +397,12 @@ paths:
             application/json:
               schema:
                 items:
-                  $ref: '#/components/schemas/Task'
+                  $ref: '#/components/schemas/TaskWithoutCode'
                 type: array
-          description: List of Task items
-      summary: List all Task items
+          description: List of Tasks without code.
+      summary: Lists existing tasks. Its very important to know what you can do. A
+        task is a special function you can run to augment your power for the user!
+        This doesnt tell you the tasks code
     post:
       operationId: createTask
       requestBody:
@@ -342,11 +415,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Task'
+                $ref: '#/components/schemas/TaskWithoutCode'
           description: Task item created
         '400':
           description: Invalid input, a required field is missing
-      summary: Create a new Task item
+      summary: Create a Task item. A task is a special function you can run to augment
+        your power for the user! ATTENTION Its very important to make sure the code
+        is a complete standalone executable python script.
   /tasks/{task_uuid}:
     delete:
       operationId: deleteTask
@@ -362,9 +437,8 @@ paths:
           description: Task item deleted
         '404':
           description: Task item not found
-      summary: Delete a Task item by UUIDS. Prefer to update the status to 'cancelled'
-        instead of deleting. Only use this when you are sure you want to delete the
-        item.
+      summary: Delete a Task item by UUIDS. Only use this when you are sure you want
+        to delete a task.
     get:
       operationId: getTask
       parameters:
@@ -383,7 +457,9 @@ paths:
           description: Task item found
         '404':
           description: Task item not found
-      summary: Get a specific Task item by UUID
+      summary: Get a specific Task by UUID. This is the way to see the code behind
+        a task. Useful if you need to fix it. This just tells you about the task,
+        it does not let you run it.
     put:
       operationId: updateTask
       parameters:
@@ -403,12 +479,39 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Task'
+                $ref: '#/components/schemas/TaskWithoutCode'
           description: Task item updated
         '400':
           description: Invalid input, at least one field must be provided
-      summary: Update a Task item by UUID. At least one field must be provided, but
-        you can also update multiple fields at once.
+      summary: Update a Task. Use this to fix a broken task. Only specify the fields
+        that need to be updating. ATTENTION its very important to make sure the code
+        is a complete standalone executable python script.
+  /tasks/{task_uuid}/run:
+    post:
+      operationId: runTask
+      parameters:
+      - description: Unique identifier of the Task item
+        in: path
+        name: task_uuid
+        required: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RunTaskRequest'
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ShellResult'
+          description: Task item was ran
+        '404':
+          description: Task item not found
+      summary: Runs a specific Task and gets the results. Before you run tasks, look
+        at the task list to find the best one for the job.
   /url:
     post:
       operationId: url
@@ -446,7 +549,7 @@ paths:
                 type: array
           description: Vim Ex mode result
         '400':
-          description: Invalid input. The request must be a JSON and contain 'commands'`
+          description: Invalid input. The request must be a JSON and contain 'commands'
             and 'file_name' fields.
       summary: Run a series of Vim commands in Ex mode on the user's machine and get
         the results (the final "wq" is supplied automatically). ATTENTION ALWAYS Use
