# src/plugin/api/schema.py
@@ -2,21 +2,35 @@ from marshmallow import Schema, fields
 
 class Task(Schema):
     uuid = fields.String(required=True, description="Unique identifier (UUID) of the item. This is generated by the server and cannot be changed.")
-    task = fields.String(required=True, description="Simple task description")
-    status = fields.String(required=True, description="""
-Status of the Task. Value can be anything, but suggested are: 'todo', 'in progress', 'done', 'do later', 'cancelled', etc. Put whatever makes most contextual sense here.
-""".strip())
-    notes = fields.String(required=True, description="Its important to add notes about the task to make this utility more useful! Think about it step by step. Add the context and any additional information. Can be from the user or the AI")
+    task = fields.String(required=True, description="Descriptive Name of task. It can be short, no more than a single sentence.")
+    desc = fields.String(required=True, description="Thorough task description. Describe what the task does on the outside with as much detail as possible. Inlcude implementation details if theyre relevant to what an engineer would care about.")
+    notes = fields.String(required=True, description="Think step by step about how to write the task code here.")
+    args = fields.List(fields.String(description="Description of the positional argument that must be passed to the task"), description="If the task script accepts arguments, they will be described here. If it doesnt, this is an empty array.", required=True)
+    code = fields.String(required=True, description="A standalone python3 script that executes the task exactly as specified. It may reference any external libraries necessary.")
+
+class TaskWithoutCode(Schema):
+    uuid = fields.String(required=True, description="Unique identifier (UUID) of the item. This is generated by the server and cannot be changed.")
+    task = fields.String(required=True, description="Descriptive Name of task. It can be short, no more than a single sentence.")
+    desc = fields.String(required=True, description="Thorough task description. Describe what the task does on the outside with as much detail as possible. Inlcude implementation details if theyre relevant to what an engineer would care about.")
+    notes = fields.String(required=True, description="Think step by step about how to write the task code here.")
+    args = fields.List(fields.String(description="Description of the positional argument that must be passed to the task"), description="If the task script accepts arguments, they will be described here. If it doesnt, this is an empty array.", required=True)
 
 class CreateTaskRequest(Schema):
-    task = fields.String(required=True, description="Simple task description. Use other fields to add as many useful details as possible.")
-    status = fields.String(required=True, description="Status of the Task. Value can be anything, but suggested are: 'todo', 'in progress', 'done', 'do later', 'cancelled', etc. Put whatever makes most contextual sense here.")
-    notes = fields.String(required=True, description="Its important to add notes when creating a task to make this utility more useful! Think about it step by step. Add the context and any additional information. Can be from the user or the AI")
+    task = fields.String(required=True, description="Descriptive Name of task. It can be short, no more than a single sentence.")
+    desc = fields.String(required=True, description="Thorough task description. Describe what the task does on the outside with as much detail as possible. Inlcude implementation details if theyre relevant to what an engineer would care about.")
+    notes = fields.String(required=True, description="Think step by step about how to write the task code here.")
+    code = fields.String(required=True, description="A standalone python3 script that executes the task exactly as specified. It may reference any external libraries necessary.")
+    args = fields.List(fields.String(description="Description of the positional argument that must be passed to the task"), description="If the task script accepts arguments, describe each of them here. If none, put an empty array.", required=True)
 
 class UpdateTaskRequest(Schema):
-    task = fields.String(required=False, description="Task description")
-    status = fields.String(required=False, description="Status of the Task")
-    notes = fields.String(required=False, description="Freeform notes about the Task")
+    task = fields.String(required=False, description="Descriptive Name of task. It can be short, no more than a single sentence.")
+    desc = fields.String(required=False, description="Thorough task description. Describe what the task does on the outside with as much detail as possible. Inlcude implementation details if theyre relevant to what an engineer would care about.")
+    notes = fields.String(required=False, description="Think step by step about how to write the task code here.")
+    code = fields.String(required=False, description="A standalone python3 script that executes the task exactly as specified. It may reference any external libraries necessary.")
+    args = fields.List(fields.String(description="Description of the positional argument that must be passed to the task"), description="If the task script accepts arguments, describe each of them here. If none, put an empty array.", required=False)
+
+class RunTaskRequest(Schema):
+    args = fields.List(fields.String(description="The positional argument that will be passed to the task"), description="If the task script expects arguments, put their values here. If none, put an empty array.", required=True)
 
 class SearchRequest(Schema):
     query = fields.String(required=True, description="Search query.")
@@ -76,8 +90,10 @@ class VimExRequest(Schema):
 
 components = [
     Task, 
+    TaskWithoutCode,
     CreateTaskRequest, 
-    UpdateTaskRequest, 
+    UpdateTaskRequest,
+    RunTaskRequest,
     SearchRequest, 
     SearchResult, 
     UrlRequest, 
@@ -88,5 +104,4 @@ components = [
     MemorizeResult,
     RememberRequest,
     RememberResult,
-    VimExRequest
 ]
